--- a/demo/index.html
+++ b/demo/index.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<script src="jquery.min.js"></script>
+	<script src="jquery.js"></script>
 	<script src="../src/jquery.event.tap.js"></script>
-	<script src="../src/jquery.event.taphold.js"></script>
+	<!-- <script src="../src/jquery.event.taphold.js"></script> -->
 	<style>
 		#box{
 			width: 400px;
@@ -14,15 +14,33 @@
 			background-color: #0fbfeb;
 			margin: 20px auto;
 		}
+
+		#boxinside{
+			width: 300px;
+			height: 300px;
+			background-color: orange;
+			margin: 20px auto;
+		}
 	</style>
 </head>
 <body>
-	<div id="box">test box</div>
+	<div id="box">
+		<div id="boxinside">test box</div>
+	</div>
 
 	<script>
-		$('#box').on('tap taphold', evt=>{
-			console.log(evt.type, evt);
+
+		$('#boxinside').on('taphold', evt=>{
+			console.log('inside', evt.type, evt);
+			evt.preventDefault();
+			evt.stopPropagation();
+			return false;
 		})
+
+		$('#box').on('taphold', evt=>{
+			console.log('outside', evt.type, evt);
+		});
+
 	</script>
 	
 </body>
