--- a/demo/tap.html
+++ b/demo/tap.html
@@ -1,47 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-	<script src="jquery.js"></script>
+	<script src="jquery.min.js"></script>
 	<script src="../src/jquery.event.tap.js"></script>
-	<!-- <script src="../src/jquery.event.taphold.js"></script> -->
 	<style>
-		#box{
+		#box {
 			width: 400px;
 			height: 400px;
 			background-color: #0fbfeb;
 			margin: 20px auto;
 		}
 
-		#boxinside{
-			width: 300px;
-			height: 300px;
-			background-color: orange;
-			margin: 20px auto;
-		}
 	</style>
 </head>
+
 <body>
 	<div id="box">
-		<div id="boxinside">test box</div>
+		<div>鼠标，手指，在此区间单击触发 pan 事件</div>
+		<div>F12 查看浏览器控制台输出</div>
 	</div>
 
 	<script>
 
-		$('#boxinside').on('tap holdtap', evt=>{
-			console.log('inside', evt.type, evt);
-			evt.preventDefault();
-			evt.stopPropagation();
-			return false;
-		})
-
-		$('#box').on('tap', evt=>{
-			console.log('outside', evt.type, evt);
-		});
+		$('#box')
+			.on('tap taphold', evt => {
+				console.log('1', evt.type);
+			})
+			
 
 	</script>
-	
+
 </body>
+
 </html>
